# sPiNNIRker

./: .coveragerc  .pylint_dict.txt  .ratexcludes  .readthedocs.yml  CITATION.cff  README.md  import_hook.py  mypy.bash  mypyd.bash  pylint.bash  pypi_to_import  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: c_actions.yml  python_actions.yml
doc/: doc_requirements.txt  make.bat  unfiltered-files.txt
doc/global/: index.html  spinnaker.css
doc/global/python/: index.html
doc/source/: conf.py  index.rst  modules.rst
extra_models/: Doxyfile
extra_models/makefiles/: Makefile
extra_models/src/: workflow.c  workflow.h
spinnirker/: __init__.py  _version.py  convert.py  partition.py  subgraph.py  workflow_application_vertex.py  workflow_machine_vertex.py
spinnirker_models/: .gitignore  Doxyfile  Makefile  mainpage.dox
spinnirker_models/makefiles/: support.mk
spinnirker_models/makefiles/run_workflow/: Makefile
spinnirker_models/src/: main.c  workflow.c  workflow.h
spirnirker_models/: Makefile
spirnirker_models/src/: workflow.c
unittests/: test_import_all.py  test_spinnirker.py  test_version.py
