# Copyright (c) 2025 The University of Manchester
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = sPiNNIRker
version = attr: spinnirker._version.__version__
description = Tools for using NIR on the SpiNNaker platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SpiNNakerManchester/sPiNNIRker
license = Apache-2.0
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        Intended Audience :: Science/Research
        Natural Language :: English
        Operating System :: POSIX :: Linux
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
maintainer = SpiNNakerTeam
maintainer_email = spinnakerusers@googlegroups.com
keywords =
        spinnaker
        nir

[options]
python_requires = >=3.8, <4
packages = find:
zip_safe = True
include_package_data = True
install_requires =
        sPyNNaker == 1!7.3.1
        nir

[options.packages.find]
include =
        spinnirker
        spinnirker.*

[options.package_data]
* =
        py.typed

[options.extras_require]
test =
        SpiNNakerTestBase == 1!7.3.1
        # pytest will be brought in by pytest-cov
        pytest-cov
        testfixtures
        mock
        graphviz
        types-requests

